<resources>
    <string name="app_name">Chatic</string>
    <string name="eml">Email address</string>
    <string name="chatic_logo">Chatic Logo</string>
    <string name="pswd">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="pfp">Profile picture</string>

    <string name="logout">Logout</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="usnm">Username</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_here">Login here</string>

    <string name="default_pfp">http://cdn.onlinewebfonts.com/svg/img_83486.png</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>