<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:ignore="FragmentTagUsage">

    <LinearLayout
        android:id="@+id/register_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/chatic_logo"
            android:src="@drawable/chatic_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/header_font_size" />

        <EditText
            android:id="@+id/register_edit_text_usnm"
            style="@style/edit_text"
            android:autofillHints="@string/usnm"
            android:hint="@string/usnm"
            android:inputType="textNoSuggestions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/register_edit_text_eml"
            style="@style/edit_text"
            android:autofillHints="@string/eml"
            android:hint="@string/eml"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/register_edit_text_pswd"
            style="@style/edit_text"
            android:layout_marginBottom="32dp"
            android:autofillHints="@string/pswd"
            android:hint="@string/pswd"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <fragment
            android:id="@+id/register_button"
            android:name="com.zectan.chatic.LoadingButtonFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_frame_side"
            tools:layout="@layout/fragment_loading_button" />

        <fragment
            android:id="@+id/sign_in_google"
            android:name="com.zectan.chatic.GoogleSignInFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_google_sign_in_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/have_account"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="toLogin"
            android:text="@string/login_here"
            android:textColor="@color/grey" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_expand_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/register_expand_pfp"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/pfp"
                android:padding="3dp"
                android:src="@mipmap/ic_launcher_round"
                app:shapeAppearanceOverlay="@style/circular_image"
                app:strokeColor="@color/primaryDark"
                app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/register_expand_usnm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>